src/EchoApp/manifests/sts/echo-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-api-dep
  namespace: echo-app-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo-app
      tier: back
  template:
    metadata:
      labels:
        app: echo-app
        tier: back
    spec:
      containers:
      - name: echo-api
        image: ghcr.io/theonorg/echo-webapi:arm
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: echo-api-svc
  namespace: echo-app-ns
spec:
  ports:
    - port: 8080
      targetPort: 80
      name: api
  selector:
    app: echo-app
    tier: back
  type: ClusterIP
