src/EchoApp/manifests/sts/echo-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: echo-db-sts
  namespace: echo-app-ns
spec:
  selector:
    matchLabels:
      app: echo-app
      tier: db
  serviceName: "echo-db-sts-svc"
  replicas: 1
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  template:
    metadata:
      labels:
        app: echo-app
        tier: db
    spec:
      containers:
      - name: echo-db
        image: postgres:14.2-alpine
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: echo-app-db-pv-claim
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: echo-app-db-pv-claim
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "microk8s-hostpath"
      resources:
        requests:
          storage: 1Gi


---

apiVersion: v1
kind: Service
metadata:
  name: echo-db-sts-svc
  namespace: echo-app-ns
spec:
  ports:
    - port: 1433
      targetPort: 1433
      name: db
  selector:
    app: echo-app
    tier: db
  clusterIP: None
