src/EchoApp/manifests/sts/echo-webapp.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-webapp-dep
  namespace: echo-app-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo-app
      tier: front
  template:
    metadata:
      labels:
        app: echo-app
        tier: front
    spec:
      containers:
      - name: echo-webapp
        image: ghcr.io/theonorg/echo-webapp:arm
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: echo-webapp-svc
  namespace: echo-app-ns
spec:
  ports:
    - port: 9000
      targetPort: 80
      name: web
  selector:
    app: echo-app
    tier: front
  type: ClusterIP
